--- a/Runder/Info.plist
+++ b/Runder/Info.plist
@@ -24,6 +24,10 @@
 	<string>This is required to get your current location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This is required to use the app.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
